# Hephaestus

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENT_REPORT.md  BUILD_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FINAL_MERGE_NOTES.md  LICENSE  Makefile  PRD.md  README.md  docker-compose.yml  hephaestus_full_product_audit.md  hephaestus_latest_repo_audit.md  hephaestus_launch_audit.md  proxy.mjs  pyproject.toml  run_clawcode_v2.py  test_phase0_verify.py  verify.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
.hephaestus/: inventions-live.md  inventions-self-review.md  inventions-self-v2.md  inventions-self-v3.md  inventions-self-v4.md  inventions-self-v5.md  inventions-self-v6.md  inventions-v2.md  inventions-v3.md  inventions.md
audits/: 2026-04-08-production-reliability-audit.md  MASTER-AUDIT-REPORT.md  config_pipeline.md  core_logic.md  pantheon_research.md  security.md
docs/: AGENTIC-CHAT-SPEC.md  BRANCHGENOME-V1-BUILD-SPEC.md  BUILD-CYCLES-4-15.md  CLAW-CODE-FEATURES.md  CODEX-OAUTH-PHASE2-PLAN.md  DESIGN.md  DOMAIN-SELECTION-DIVERSITY.md  FAILURE-LOG-DESIGN.md  INTERACTIVE-MODE-SPEC.md  INVENTION-QUALITY-PLAN.md  LOAD-BEARING-CHECK-DESIGN.md  MIGRATION-PLAN.md  PERPLEXITY-INTEGRATION.md  PM-AUDIT-CYCLE-1.md  SOLUTION-SHAPE-DESIGN.md  UX-AUDIT-ROUND2.md  api_reference.md  architecture.md  benchmarks.md  deepforge.md  lens_authoring.md  runbook.md
docs/production/: CONFIG_CONTRACT.md  DEPLOYMENT_MODEL.md  PANTHEON_STATE_MODEL.md  RUN_LIFECYCLE.md  SYSTEM_CONTRACT.md  TOOL_ABI.md
docs/superpowers/plans/: 2026-04-03-forgebase-foundation-platform.md  2026-04-04-forgebase-compiler.md  2026-04-04-forgebase-fusion.md  2026-04-04-forgebase-invention-loop.md  2026-04-04-forgebase-linting.md
docs/superpowers/specs/: 2026-04-03-forgebase-foundation-platform-design.md  2026-04-04-forgebase-compiler-design.md  2026-04-04-forgebase-fusion-design.md  2026-04-04-forgebase-invention-loop-design.md  2026-04-04-forgebase-linting-design.md  2026-04-05-forgebase-5b-cli-design.md
examples/: fraud_detection.md  load_balancer.md  recommendation_engine.md  reputation_system.md  traffic_optimization.md
outputs/clawcode-v2/: V2-ARCHITECTURE-REPORT.md  report-full.json  workspace-context.md
research/pantheon-harness/: report-01-multi-agent-consensus.md  report-02-harness-runtime-orchestration.md  report-03-repo-aware-agent-systems.md  report-04-llm-creativity-and-invention-systems.md
scripts/: codex_oauth_bridge.mjs  generate_manifest.py  migrate.py
src/hephaestus/: __init__.py
src/hephaestus/agent/: __init__.py  runtime.py
src/hephaestus/analytics/: __init__.py  failure_log.py  history.py
src/hephaestus/branchgenome/: __init__.py  arena.py  assay.py  ledger.py  models.py  strategy.py
src/hephaestus/cli/: agent_chat.py  batch.py  commands.py  config.py  display.py  forgebase_commands.py  forgebase_display.py  main.py  repl.py
src/hephaestus/config/: __init__.py  (+1 more)
tests/: conftest.py  test_doc_parity.py  test_web_app.py
tests/test_agent/: test_runtime.py
tests/test_analytics/: test_failure_log.py  test_history.py
tests/test_branchgenome/: test_arena.py  test_assay.py  test_genesis_integration.py  test_ledger.py
tests/test_cli/: __init__.py  test_agent_chat.py  test_batch.py  test_commands.py  test_forgebase_commands.py  test_main.py  test_repl.py
tests/test_config/: test_layered.py
tests/test_convergence/: __init__.py  test_database.py  test_detector.py  test_seed.py  test_tracker.py
tests/test_core/: test_decomposer.py  test_diversity.py  test_genesis.py  test_input_validation.py  test_json_utils.py  test_load_bearing_check.py  test_olympus.py  test_parallel.py  test_quality_gate.py  test_recovery.py  test_scorer.py  test_searcher.py  test_structural_novelty.py  test_translator.py  test_verifier.py
tests/test_deepforge/: test_adapters.py  test_agent_sdk.py  test_agentic.py  test_claude_max.py  test_codex_cli.py  test_codex_oauth.py  test_harness.py  test_interference.py  test_pressure.py  test_pruner.py  test_retry.py
tests/test_execution/: test_models.py  test_orchestrator.py  test_run_store.py
tests/test_export/: test_markdown.py
tests/test_forgebase/: conftest.py
tests/test_integration/: test_full_pipeline.py
tests/test_lenses/: __init__.py  test_bundles.py  test_cards.py  test_cells.py  test_exclusion_ledger.py  test_lineage.py  test_loader.py  test_loader_composites.py  test_selector.py  test_selector_bundles.py  test_validator.py
tests/test_memory/: test_transparency.py
tests/test_novelty/: test_solution_shapes.py  test_vector.py
tests/test_output/: __init__.py  test_formatter.py  test_prior_art.py  test_proof.py
tests/test_pantheon/: test_coordinator.py
tests/test_prompts/: test_context_loader.py
tests/test_providers/: test_registry.py
tests/test_research/: test_perplexity.py
tests/test_sdk/: test_async_client.py  test_client_research.py
tests/test_session/: test_compact.py  test_deliberation.py  test_reference_lots.py  test_schema.py  test_todos.py
tests/test_telemetry/: test_cost.py
tests/test_tools/: test_defaults.py  test_file_ops.py  test_mcp_client.py  test_mcp_manager.py  test_permissions.py  test_registry.py  test_web_tools.py
tests/test_transliminality/: test_bridge_retriever.py  test_engine.py  test_enums.py  test_fusion_adapter.py  test_injection_adapters.py  test_integration.py  test_integration_scorer.py  test_models.py  test_pack_assembler.py  test_poisoning_guards.py  test_policies.py  test_role_signature_prompt.py  test_scoring.py  test_signature_builder.py  test_vault_router.py
tests/test_workspace/: test_context.py  test_inventor.py  test_mode.py  test_repo_dossier.py  test_scanner.py
transliminal-layer/: full-feature-discussion-transcript.md  hephaestus_transliminality_feature_doc.md
web/: app.py  forgebase_api.py  forgebase_deps.py  forgebase_models.py
web/static/: app.js  style.css
web/templates/: index.html
(+484 files in other folders)
