[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hephaestus-ai"
version = "0.1.0"
description = "The Invention Engine — genuinely novel solutions through cross-domain structural transfer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Theyab", email = "theyab@hephaestus.dev" },
]
keywords = ["ai", "invention", "creativity", "llm", "innovation", "cross-domain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
heph = "hephaestus.cli.main:main"

[project.urls]
Homepage = "https://github.com/CodePhobiia/hephaestus"
Documentation = "https://github.com/CodePhobiia/hephaestus/tree/main/docs"
Repository = "https://github.com/CodePhobiia/hephaestus"
Issues = "https://github.com/CodePhobiia/hephaestus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hephaestus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
