[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hephaestus-ai"
version = "0.1.0"
description = "The Invention Engine — genuinely novel solutions through cross-domain structural transfer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Theyab", email = "theyab@hephaestus.dev" },
]
keywords = ["ai", "invention", "creativity", "llm", "innovation", "cross-domain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0,<2",
    "openai>=1.50.0,<3",
    "click>=8.1.0,<9",
    "rich>=13.0.0,<14",
    "pyyaml>=6.0,<7",
    "numpy>=1.26.0,<3",
    "sentence-transformers>=3.0.0,<4",
    "httpx>=0.27.0,<1",
    "aiosqlite>=0.20.0,<1",
    "asyncpg>=0.29.0,<1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.30.0,<1",
    "jinja2>=3.1.0,<4",
]
observability = [
    "opentelemetry-api>=1.20.0,<2",
    "opentelemetry-sdk>=1.20.0,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0,<2",
]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=5.0.0,<6",
    "ruff>=0.5.0,<1",
    "mypy>=1.10.0,<2",
    "pip-audit>=2.7.0,<3",
]

[project.scripts]
heph = "hephaestus.cli.main:main"

[project.urls]
Homepage = "https://github.com/CodePhobiia/hephaestus"
Documentation = "https://github.com/CodePhobiia/hephaestus/tree/main/docs"
Repository = "https://github.com/CodePhobiia/hephaestus"
Issues = "https://github.com/CodePhobiia/hephaestus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hephaestus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
pycodestyle.max-line-length = 120

[tool.ruff.lint.per-file-ignores]
# SQL repos: long query strings are clearer on one line
"src/hephaestus/forgebase/store/sqlite/*.py" = ["E501"]
# Prompt templates: long format strings for LLM prompts
"src/hephaestus/pantheon/prompts.py" = ["E501"]
"src/hephaestus/core/translator.py" = ["E501"]
"src/hephaestus/core/decomposer.py" = ["E501"]
# Convergence seed: long pattern definitions
"src/hephaestus/convergence/seed.py" = ["E501"]
# BranchGenome arena: long f-string commitment statements
"src/hephaestus/branchgenome/arena.py" = ["E501"]
"src/hephaestus/branchgenome/assay.py" = ["E501"]
# CLI REPL: long Rich markup and display strings
"src/hephaestus/cli/repl.py" = ["E501"]
"src/hephaestus/cli/agent_chat.py" = ["E501"]
"src/hephaestus/cli/main.py" = ["E501"]
# Output formatting: long template strings
"src/hephaestus/output/formatter.py" = ["E501"]
"src/hephaestus/output/proof.py" = ["E501"]
"src/hephaestus/export/markdown.py" = ["E501"]
# Pantheon coordinator: long prompt construction
"src/hephaestus/pantheon/coordinator.py" = ["E501"]
# Searcher: long prompt template strings
"src/hephaestus/core/searcher.py" = ["E501"]
# Workspace inventor: long template strings
"src/hephaestus/workspace/inventor.py" = ["E501"]
# Transliminality prompts: long LLM prompt template strings
"src/hephaestus/transliminality/prompts/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
# Relax rules that generate noise for a codebase that interfaces heavily with
# LLM APIs returning dynamic data. Real type bugs are still caught.
warn_return_any = false
disallow_any_generics = false
# Adapter subclasses intentionally change method signatures for different LLM APIs
disable_error_code = ["override"]

[[tool.mypy.overrides]]
# ForgeBase compiler backends wrap external LLM APIs with dynamic responses
module = [
    "hephaestus.forgebase.compiler.backends.*",
    "hephaestus.forgebase.integration.*",
    "hephaestus.forgebase.fusion.*",
    "hephaestus.forgebase.linting.detectors.*",
    "hephaestus.forgebase.linting.remediation.*",
    "hephaestus.forgebase.ingestion.*",
    "hephaestus.forgebase.agents.*",
    "hephaestus.forgebase.tools.*",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# CLI modules use dynamic Rich output and session state
module = [
    "hephaestus.cli.repl",
    "hephaestus.cli.agent_chat",
    "hephaestus.cli.commands",
    "hephaestus.cli.display",
    "hephaestus.cli.forgebase_commands",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Telemetry uses optional tracing/metrics libs
module = "hephaestus.telemetry.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Merge service has a design-level union type issue (PageVersion used as base
# for ClaimVersion/LinkVersion/SourceVersion — needs a proper base class)
module = "hephaestus.forgebase.service.merge_service"
disable_error_code = ["attr-defined", "assignment"]

[[tool.mypy.overrides]]
# Pantheon builds dynamic prompts and processes LLM JSON responses
module = [
    "hephaestus.pantheon.coordinator",
    "hephaestus.pantheon.models",
    "hephaestus.pantheon.state_machine",
]
disable_error_code = ["attr-defined", "override", "arg-type"]

[[tool.mypy.overrides]]
# DeepForge adapters wrap multiple LLM APIs with varying response shapes
module = "hephaestus.deepforge.adapters.*"
disable_error_code = ["override", "attr-defined", "arg-type"]

[[tool.mypy.overrides]]
# Output formatters process dynamic invention data
module = [
    "hephaestus.output.*",
    "hephaestus.export.*",
]
disable_error_code = ["attr-defined", "union-attr"]

[[tool.mypy.overrides]]
# Lenses state uses complex adaptive typing
module = "hephaestus.lenses.state"
disable_error_code = ["attr-defined", "override", "assignment"]

[[tool.mypy.overrides]]
# ForgeBase tools definitions, compiler tiers, agents, and linting detectors
# process dynamic LLM data and ForgeBase domain objects
module = [
    "hephaestus.forgebase.tools.definitions",
    "hephaestus.forgebase.compiler.tier1",
    "hephaestus.forgebase.compiler.tier2",
    "hephaestus.forgebase.linting.detectors.contradictory_claim",
    "hephaestus.forgebase.agents.handlers.*",
    "hephaestus.forgebase.fusion.*",
    "hephaestus.forgebase.research.*",
    "hephaestus.forgebase.factory",
]
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "arg-type"]

[[tool.mypy.overrides]]
# Core modules with complex dynamic pipeline data
module = [
    "hephaestus.core.genesis",
    "hephaestus.core.verifier",
    "hephaestus.core.searcher",
    "hephaestus.core.scorer",
]
disable_error_code = ["attr-defined", "assignment"]
